tests/baselines/reference/emptyTypeArgumentList.errors.txt
tests/cases/compiler/emptyTypeArgumentList.ts(2,4): error TS1099: Type argument list cannot be empty.
tests/cases/compiler/emptyTypeArgumentList.ts(2,5): error TS2558: Expected 1 type arguments, but got 0.


==== tests/cases/compiler/emptyTypeArgumentList.ts (2 errors) ====
    function foo<T>() { }
    foo<>();
       ~~
!!! error TS1099: Type argument list cannot be empty.
        
!!! error TS2558: Expected 1 type arguments, but got 0.